--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="/bower_components/toastr/toastr.css" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
-    <link href="css/cover.css" rel="stylesheet">
+    <link href="/css/cover.css" rel="stylesheet">
 
   </head>
 
