got projects template working

--- a/app/projects/projects.html
+++ b/app/projects/projects.html
@@ -1,1 +1,5 @@
-<div data-pos-widget-header title="{{vm.title}}"></div>
+<!-- <div data-pos-widget-header title="{{vm.title}}"></div>-->
+
+<ul class="cb-slideshow">
+	<li data-ng-repeat="project in vm.projects"><span></span><div><h3></h3></div></li>
+</ul>
