--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
   </head>
 
-  <body>
-
+  <body id="page">
+    <div data-ng-view></div>
+    
     <div class="site-wrapper">
 
       <div class="site-wrapper-inner">
@@ -42,26 +43,11 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="tel://+61417908470">+61 417 908 470</a></li>
-                  <li><a href="mailto:nigel@positiva.com.au">Email</a></li>
+                  <li><a href="mailto:nigel@positiva.com.au">@positiva.com.au</a></li>
                 </ul>
               </nav>
             </div>
           </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">Positiva Building</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p> Positiva Building Ltd, license no, abn etc</p>
-            </div>
-          </div>
-
         </div>
 
       </div>
