read image from dir and parse

--- a/app/projects/projects.html
+++ b/app/projects/projects.html
@@ -1,5 +1,3 @@
-<!-- <div data-pos-widget-header title="{{vm.title}}"></div>-->
-
 <ul class="cb-slideshow">
-	<li data-ng-repeat="project in vm.projects"><span></span><div><h3></h3></div></li>
+	<li data-ng-repeat="project in vm.projects"><span background-image></span><div><h3></h3></div></li>
 </ul>
