randomized gallery, added common factoru

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
     <script src="/app/blocks/logger/logger.js"></script>
     <script src="/app/blocks/route/route.module.js"></script>
     <script src="/app/blocks/route/routehelper.js"></script>
-
+    <script src="/app/blocks/common/common.module.js"></script>
+    <script src="/app/blocks/common/common.js"></script>
+     
     <!-- core module -->
     <script src="/app/core/core.module.js"></script>
     <script src="/app/core/constants.js"></script>
