--- a/app/projects/projects.html
+++ b/app/projects/projects.html
@@ -1,11 +1,8 @@
 <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <!--
-      data-ng-style="{'background-image': 'url(' + project.source + ')'}"
-     -->
-    <div data-ng-repeat="project in vm.projects" data-ng-attr-source="{{project.source}}" ng-class="{ 'active' : $first}" class="item">
+  <div class="carousel-inner" role="listbox">    
+    <div data-ng-repeat="project in vm.projects" data-ng-attr-name="{{project.name}}" data-ng-attr-source="{{project.source}}" ng-class="{ 'active' : $first}" class="item">
       <div class="carousel-caption"></div>
     </div>
   </div>
@@ -19,4 +16,4 @@
     </a>
 </div>
 
-<div class="mastfoot"><div class="inner"><h4>Positiva {{vm.currentName}}, Western Australia</h4></div></div>
+<div class="mastfoot"><div class="inner"><h4>Positiva in {{vm.currentName}}, Western Australia</h4></div></div>
