--- a/app/projects/projects.html
+++ b/app/projects/projects.html
@@ -1,4 +1,4 @@
-<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
+<div id="carousel" class="carousel fade" data-ride="carousel">
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">    
@@ -8,10 +8,10 @@
   </div>
   
   <!-- Controls -->
-  <a class="left carousel-control" href="" ng-click="vm.slide('prev')" role="button" data-slide="prev">
+  <a class="carousel-control left" href="" ng-click="vm.slide('prev')" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     </a>
-    <a class="right carousel-control" ng-click="vm.slide('next')" role="button" data-slide="next">
+    <a class="carousel-control right" ng-click="vm.slide('next')" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     </a>
 </div>
