Configured for Google App Engine

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 
     <meta name="description" content="Positiva Building">
-    <meta name="author" content="Michael Bramwell">
+    <meta name="author" content="Michael Bramwell :: mdb@protonmail.ch">
 
     <title>Positiva Building</title>
 
