added loading screen

--- a/app/projects/projects.html
+++ b/app/projects/projects.html
@@ -16,4 +16,4 @@
     </a>
 </div>
 
-<div class="mastfoot"><div class="inner"><h4>Positiva in {{vm.currentName}}, Western Australia</h4></div></div>
+<div class="mastfoot"><div class="inner"><h4>{{vm.currentName}}</h4></div></div>
